Fixed unexpected CSS token and res function issues on safari

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1982,7 +1982,7 @@ Looking Details
   -moz-transition: 0.6s;
   -o-transition: 0.6s;
   -webkit-transition: 0.6s;
-  transition: 0.6s
+  transition: 0.6s;
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
 
@@ -2893,6 +2893,10 @@ a.view-all {
   padding-left: 10px;
 }
 
+/* Commenting out roundedTwo - not sure what it is used for.
+Throws error in Safari
+Unexpected CSS token: : line 2906 and 2940
+
 .roundedTwo {
   width: 28px;
   height: 28px;
@@ -2973,6 +2977,7 @@ a.view-all {
   filter: alpha(opacity=100);
   opacity: 1;
 }
+*/
 
 input[type="checkbox"] {
 opacity: 0;
